syntax = "proto3";

option java_package = "org.hse.moodactivities.common.proto.requests.profile";
option java_multiple_files = true;

package requests;

message ChangeInfoRequest {
  string name = 1;
  string dateOfBirth = 2;
  string password = 3;
}
